// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Title No Styles 1`] = `
Array [
  <h1
    className="xxx-title xxx-title--h1"
  >
    Heading level 1
  </h1>,
  <h2
    className="xxx-title xxx-title--h2"
  >
    Heading level 2
  </h2>,
  <h3
    className="xxx-title xxx-title--h3"
  >
    Heading level 3
  </h3>,
  <h4
    className="xxx-title xxx-title--h4"
  >
    Heading level 4
  </h4>,
  <h5
    className="xxx-title xxx-title--h5"
  >
    Heading level 5
  </h5>,
  <h6
    className="xxx-title xxx-title--h6"
  >
    Heading level 6
  </h6>,
]
`;

exports[`Storyshots Component API/Title Semantic Levels 1`] = `
Array [
  <h1
    className="fd-title fd-title--h1"
  >
    Heading level 1
  </h1>,
  <h2
    className="fd-title fd-title--h2"
  >
    Heading level 2
  </h2>,
  <h3
    className="fd-title fd-title--h3"
  >
    Heading level 3
  </h3>,
  <h4
    className="fd-title fd-title--h4"
  >
    Heading level 4
  </h4>,
  <h5
    className="fd-title fd-title--h5"
  >
    Heading level 5
  </h5>,
  <h6
    className="fd-title fd-title--h6"
  >
    Heading level 6
  </h6>,
]
`;

exports[`Storyshots Component API/Title Styled Levels 1`] = `
Array [
  <h1
    className="fd-title fd-title--h6"
  >
    Heading level 1
  </h1>,
  <h2
    className="fd-title fd-title--h5"
  >
    Heading level 2
  </h2>,
  <h3
    className="fd-title fd-title--h4"
  >
    Heading level 3
  </h3>,
  <h4
    className="fd-title fd-title--h3"
  >
    Heading level 4
  </h4>,
  <h5
    className="fd-title fd-title--h2"
  >
    Heading level 5
  </h5>,
  <h6
    className="fd-title fd-title--h1"
  >
    Heading level 6
  </h6>,
]
`;

exports[`Storyshots Component API/Title Truncated 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <h1
    className="fd-title fd-title--h1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h1>
  <h2
    className="fd-title fd-title--h2"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h2>
  <h3
    className="fd-title fd-title--h3"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h3>
  <h4
    className="fd-title fd-title--h4"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h4>
  <h5
    className="fd-title fd-title--h5"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h5>
  <h6
    className="fd-title fd-title--h6"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h6>
</div>
`;

exports[`Storyshots Component API/Title Wrapped 1`] = `
<div
  style={
    Object {
      "width": "300px",
    }
  }
>
  <h1
    className="fd-title fd-title--h1 fd-title--wrap"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h1>
  <h2
    className="fd-title fd-title--h2 fd-title--wrap"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h2>
  <h3
    className="fd-title fd-title--h3 fd-title--wrap"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h3>
  <h4
    className="fd-title fd-title--h4 fd-title--wrap"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h4>
  <h5
    className="fd-title fd-title--h5 fd-title--wrap"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h5>
  <h6
    className="fd-title fd-title--h6 fd-title--wrap"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit
  </h6>
</div>
`;
